Dinocraft: more config fixes